# DiplomaThesis

./: .gitignore  A2ML1_interactions.tsv  Dockerfile  MOGONET_brca_baselines.ipynb  README.md  Research.md  SchuzkaNotes.md  SemestralPPT.pptx  TODO.md  Untitled.ipynb  \  baseline_experiments.ipynb  best_model.pth  bipartite_gnn.ipynb  brca_all_omics_baselines_new.ipynb  brca_all_omics_benchmark.ipynb  brca_all_omics_bignn.ipynb  brca_baseline_experiments.ipynb  brca_data_exploration.ipynb  brca_eval.ipynb  brca_last_experiments.ipynb  brca_preprocessing.ipynb  circrna-mirna-interactions-mirbase.csv  cora_example.ipynb  deseq2.ipynb  disease_annoations.csv  ensembl_ids_genes_map.csv  fold_0_disease_mogonet_model.pth  fold_0_mogonet_model.pth  fold_1_disease_mogonet_model.pth  fold_1_mogonet_model.pth  fold_2_disease_mogonet_model.pth  fold_2_mogonet_model.pth  fold_3_mogonet_model.pth  fold_4_mogonet_model.pth  fold_5_mogonet_model.pth  gene_length.txt  gene_lengths.csv  gene_lengths.gh38.csv  gnn_in_numpy_from_scratch.ipynb  (+29 more)
BRCA_PROCESSED_DATA/: README.md
MDS_data_preprocessed/: annotations.csv  circrna.csv  mirna.csv  pirna.csv  te_counts.csv
baseline_evals/: feature_selection.py  knn_eval.py  mlp_eval.py  svm_eval.py  xgboost_eval.py
bipartite_gnn/: README.md  evaluation.py  feat_integration_models.py  graph_building.py  graph_visualizatons.py  model.py  mogonet_gat.py  preprocessing.py  rgat_bignn.py  train_test.py
gnn_experiments/: bipartite_eval.py  bipartite_gnn.py  mogonet.py  mogonet_eval.py
logs/: mds_disese_eval.csv
src/: base_evaluator.py  (+6 more)
(+340 files in other folders)
