[project]
name = "diplomageneral"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.9.2",
    "numpy>=2.1.2",
    "polars>=1.10.0",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "torch>=2.5.0",
    "torch-geometric>=2.6.1",
    "ipykernel>=6.29.5",
    "mrmr-selection>=0.2.8",
    "pip>=24.2",
    "optuna>=4.0.0",
    "xgboost>=2.1.1",
    "lightning>=2.4.0",
    "pyarrow>=17.0.0",
    "gtftools>=0.9.0",
    "fastexcel>=0.12.0",
    "pandas>=2.2.3",
    "networkx>=3.4.2",
]

[tool.pyright]
typeCheckingMode = "off"

[tool.ruff]
line-length = 88
